--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -30,13 +30,11 @@
         <script src="//code.tidio.co/<%- theme.tidio.public_key %>.js"></script>
         <script> 
             $(document).ready(function () {
-
                 setInterval(change_Tidio, 50);  
                 function change_Tidio() { 
-
                     var tidio=$("#tidio-chat iframe");
                     if(tidio.css("display")=="block"&& $(window).width()>977 ){
-                        document.getElementById("tidio-chat-iframe").style.bottom= ($("div#backTop.top-scroll").css("display")=="none" &&$(window).width()>977)>0? "-40px" : ($("div.toc-title").length&&$(window).width()>977)>0?"80px":"20px";   
+                        document.getElementById("tidio-chat-iframe").style.bottom= ($("div#backTop.top-scroll").css("display")=="none" &&$(window).width()>977)>0? "-40px" : ($("div.toc-title").length&&$(window).width()>977)>0?"<%if(theme.toc.showToggleBtn){%>85px<%}else{%>20px<%}%>":"20px";   
                         document.getElementById("tidio-chat-iframe").style.right="-15px";   
                         document.getElementById("tidio-chat-iframe").style.height=parseInt(tidio.css("height"))>=520?"520px":tidio.css("height");
                         document.getElementById("tidio-chat-iframe").style.zIndex="997";
@@ -50,7 +48,6 @@
                         document.getElementById("tidio-chat-iframe").style.bottom= ($("div#backTop.top-scroll").css("display")=="none" && $(window).width()<601)>0? "-10px":"45px" ;   
                         document.getElementById("tidio-chat-iframe").style.zIndex="997";
                     }
-
                     if( tidio.css("display")=="block"&&$(window).width()<601 && parseInt(tidio.css("height"))>=230){
                         document.getElementById("tidio-chat-iframe").style.zIndex="998";
                     }
