添加百度分析

--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -19,6 +19,7 @@
     <script src="/js/matery.js"></script>
 
     <%- partial('_partial/google-analytics') %>
+    <%- partial('_partial/baidu-analytics') %>
     <% if (theme.clicklove.enable) { %>
     <script src="<%- theme.libs.js.clicklove %>" async="async"></script>
     <% } %>
