--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -20,6 +20,7 @@
 
     <%- partial('_partial/google-analytics') %>
     <%- partial('_partial/baidu-analytics') %>
+    <%- partial('_partial/baidu-push') %>
     <% if (theme.clicklove.enable) { %>
     <script src="<%- theme.libs.js.clicklove %>" async="async"></script>
     <% } %>
