修复rss无法显示的问题

--- a/layout/_partial/social-link.ejs
+++ b/layout/_partial/social-link.ejs
@@ -40,7 +40,7 @@
     </a>
 <% } %>
 
-<% if (theme.socialLink.rss.enable) { %>
+<% if (theme.socialLink.rss) { %>
     <a href="<%- url_for('/atom.xml') %>" class="tooltipped" target="_blank" data-tooltip="RSS 订阅" data-position="top" data-delay="50">
         <i class="fas fa-rss"></i>
     </a>
