--- a/layout/friends.ejs
+++ b/layout/friends.ejs
@@ -42,6 +42,9 @@
         line-height: 0.8rem;
         padding-bottom: 16px;
         border-bottom: 2px solid #fff;
+        position: relative;
+        top:-15px;
+        left: 3px;
     }
 
     .friend-button {
