--- a/layout/friends.ejs
+++ b/layout/friends.ejs
@@ -209,7 +209,7 @@
                                         <img src="<%- friend.avatar %>" alt="img">
                                         <div>
                                             <h1 class="friend-name"><%- friend.name %></h1>
-                                            <p><%- friend.introduction %></p>
+                                            <p style="position: relative;top: -35px;"><%- friend.introduction %></p>
                                         </div>
                                     </div>
                                     <div class="friend-button">
