--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -28,6 +28,7 @@
             </span>
             <% } %>
             <br>
+            <% if (theme.time.enable) { %>
             <span id="sitetime">载入运行时间...</span>
             <script>
                 function siteTime() {
@@ -72,6 +73,7 @@
                 }
                 setInterval(siteTime, 1000);
             </script>
+            <% } %>
             <br>
             <% if (theme.icp.enable) { %>
             <span id="icp"><img src="/medias/icp.png" style="vertical-align: text-bottom;" />
