--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -30,21 +30,21 @@
 	  <% if(!theme.menu[key].children) { %>
 		<a href="<%- theme.menu[key].url %>" class="waves-effect waves-light">
 			<% if (theme.menu[key].icon && theme.menu[key].icon.length > 0) { %>
-			    <i class="fa fa-fw <%- theme.menu[key].icon %>"></i>
+			    <i class="fa-fw <%- theme.menu[key].icon %>"></i>
 			<% } else { %>
-				<i class="fa fa-fw fa-link"></i>
+				<i class="fas fa-fw fa-link"></i>
 			<% } %>
 			<%- (config.language === 'zh-CN' && menuMap.has(key)) ? menuMap.get(key) : key %>
 		</a>
           <% } else { %>
 		<a href="javascript:;">
 			<% if (theme.menu[key].icon && theme.menu[key].icon.length > 0) { %>
-				<i class="fa fa-fw <%- theme.menu[key].icon %>"></i>
+				<i class="fa-fw <%- theme.menu[key].icon %>"></i>
 			<% } else { %>
-				<i class="fa fa-fw fa-link"></i>
+				<i class="fas fa-fw fa-link"></i>
 			<% } %>
 			<%- (config.language === 'zh-CN' && menuMap.has(key)) ? menuMap.get(key) : key %>
-			<span class="m-icon"><i class="fa fa-chevron-right"></i></span>
+			<span class="m-icon"><i class="fas fa-chevron-right"></i></span>
 		</a>
             <ul <%if(theme.navMenu&&theme.navMenu.bgColor){%> style="background: <%-theme.navMenu.bgColor%>;"<%}%> >
               <% for(let childrenLink of theme.menu[key].children){ %>
@@ -66,7 +66,7 @@
         <li><div class="divider"></div></li>
         <li>
             <a href="<%- theme.githubLink.url %>" class="waves-effect waves-light" target="_blank">
-                <i class="fa fa-github-square fa-fw"></i><%- theme.githubLink.title %>
+                <i class="fab fa-github-square fa-fw"></i><%- theme.githubLink.title %>
             </a>
         </li>
         <% } %>
