--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -99,7 +99,7 @@ blockquote {
 }
 
 pre {
-    padding: 1.5rem !important;
+    padding: 1.5rem 1.5rem 1.5rem 3.3rem !important;
     margin: 1rem 0 !important;
     background: #272822;
     overflow: auto;
