--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -1664,7 +1664,7 @@ footer .copy-right {
     border-radius: 2px;
     background-color: #f2f2f2;
     color: #e96900;
-    font-size: .9rem;
+    font-style: normal;
     white-space: pre-wrap;
 }
 
