--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -98,6 +98,9 @@
     <% if (theme.instantpage.enable) { %>
     <script src="<%- theme.libs.js.instantpage %>" type="module"></script>
     <% } %>
+    
+    <!-- 代码块复制功能 -->
+    <script type="text/javascript" src="<%- theme.libs.js.clipboard %>"></script>
 
 </body>
 
