--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -926,10 +926,6 @@ article .article-tags .chip {
     margin-bottom: -5px;
 }
 
-#artDetail .article-tag {
-    float: left;
-}
-
 #artDetail .article-tag .chip {
     font-size: 1rem;
     font-weight: 400;
@@ -1014,6 +1010,9 @@ article .article-tags .chip {
 
 #artDetail .reprint {
     margin: 15px 0 5px 0;
+    margin-bottom: 0.4rem;
+    padding: 0.5rem 0.8rem;
+    border: 1px solid #eee;
 }
 
 #artDetail .reprint .reprint-tip {
@@ -1113,14 +1112,9 @@ table tr:nth-child(2n), thead {
     visibility: visible;
 }
 
-#article-share .social-share {
-    text-align: center;
-    margin: 30px 0;
-}
-
 @media only screen and (min-width: 600px) {
     #article-share .social-share a {
-        margin-right: 15px !important;
+        margin-left: 15px !important;
     }
 }
 
