--- a/layout/_partial/valine.ejs
+++ b/layout/_partial/valine.ejs
@@ -26,7 +26,7 @@
         padding: 0 2px;
         color: #42b983;
         font-weight: 500;
-        text-decoration: underline;
+        text-decoration: none;
     }
 
     #vcomments img {
