--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -945,7 +945,7 @@ article .article-tags .chip {
     border-radius: 15px;
     margin-right: 5px;
     margin-bottom: 2px;
-    color: #71bbb6;
+    color: #42b983;
     background: #fff;
     border: 1px solid;
     transition: all 0.6s ease-in-out;
@@ -953,7 +953,7 @@ article .article-tags .chip {
 
 #artDetail .tag_share .article-tag .chip:hover {
     color: #fff;
-    background: #71bbb6;
+    background: #42b983;
 }
 
 #artDetail .post-cate {
